<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Financial Tool</string>

    <!-- Section name DashboardActivityoard [CHAR LIMIT=20] -->
    <string name="section_dashboard">Dashboard</string>

    <!-- Section name for all transactions [CHAR LIMIT=20] -->
    <string name="section_transaction">Transaction</string>

    <!-- Section name PropertyActivityerty [CHAR LIMIT=20] -->
    <string name="section_property">Property</string>

    <!-- Section name for User Account [CHAR LIMIT=20] -->
    <string name="section_userAccount">User Account</string>

    <!-- Column header name for dashboard ID [CHAR LIMIT=50] -->
    <string name="dashboard_table_id">ID</string>

    <!-- Column header name for dashboard Date [CHAR LIMIT=50] -->
    <string name="dashboard_table_date">Date</string>

    <!-- Column header name for dashboard Product [CHAR LIMIT=50] -->
    <string name="dashboard_table_product">Product</string>

</resources>
