<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_background"
        android:orientation="vertical"
        tools:context="lamngo.financialtool.DashboardActivity" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Last 10 transactions"
            android:textAlignment="center"
            android:textColor="#fc0000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/dashboard_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:stretchColumns="1,2,3" >

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:padding="16dp"
                    android:text="@string/dashboard_table_id"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_column="2"
                    android:padding="16dp"
                    android:text="@string/dashboard_table_date"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_column="3"
                    android:padding="16dp"
                    android:text="@string/dashboard_table_product"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Total sales"
            android:textAlignment="center"
            android:textColor="#fc0000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dashboard_total_sale"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp" />

    </LinearLayout>

</ScrollView>